--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "browserify-zlib": "^0.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
+    "multer": "^1.4.5-lts.1",
     "querystring-es3": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "sass": "^1.63.4",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
