--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "browserify-zlib": "^0.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
+    "firebase": "^11.3.1",
     "multer": "^1.4.5-lts.1",
     "querystring-es3": "^0.2.1",
     "react": "^18.2.0",
